--- a/Character creation/character-creation.html
+++ b/Character creation/character-creation.html
@@ -33,21 +33,25 @@
         </div>
     </nav>
 
-    <div class="mb-3">
-        <label for="exampleFormControlInput1" class="form-label">Name</label>
-        <input type="" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+    <form class="character form" id="characterForm">
+        <div class="mb-3" id="name">
+            <label for="name label" class="form-label">Name</label>
+            <input type="" class="form-control" id="nameLabel" placeholder="">
+        </div>
+        <div class="mb-3" id="shortDescription">
+            <label for="short description label" class="form-label">Short Description</label>
+            <textarea class="form-control" id="shortDescriptionLabel" rows="2"></textarea>
+        </div>
+        <div class="mb-3" id="imageInput">
+            <input type="file" id="uploadImage" accept=".jpg, .jpeg, .png">
+        </div>
+        <div id="imageContainer"></div>
+        <div class="mb-3" id="" description>
+            <label for="description label" class="form-label">Description</label>
+            <textarea class="form-control" id="descriptionLabel" rows="6"></textarea>
+        </div>
     </div>
-    <div class="mb-3">
-        <label for="exampleFormControlTextarea1" class="form-label">Short Description</label>
-        <textarea class="form-control" id="exampleFormControlTextarea1" rows="2"></textarea>
-    </div>
-    <img src="st,small,507x507-pad,600x600,f8f8f8.jpg" class="img-fluid" alt="red13">
-    <div class="mb-3">
-        <label for="exampleFormControlTextarea1" class="form-label">Description</label>
-        <textarea class="form-control" id="exampleFormControlTextarea1" rows="6"></textarea>
-    </div>
-
-    </div>
+</form>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
         crossorigin="anonymous"></script>
@@ -57,6 +61,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"
         integrity="sha384-fbbOQedDUMZZ5KreZpsbe1LCZPVmfTnH7ois6mU1QK+m14rQ1l2bGBq41eYeM/fS"
         crossorigin="anonymous"></script>
+    <script src="character-creation.js"></script>
 </body>
 
 </html>
