--- a/Character creation/character-creation.html
+++ b/Character creation/character-creation.html
@@ -50,8 +50,9 @@
             <label for="description label" class="form-label">Description</label>
             <textarea class="form-control" id="descriptionLabel" rows="6"></textarea>
         </div>
-    </div>
-</form>
+        <button type="submit" class="btn btn-primary" id="creationButton">Create</button>
+        </div>
+    </form>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
         crossorigin="anonymous"></script>
