character creation done

--- a/Character creation/character-creation.html
+++ b/Character creation/character-creation.html
@@ -33,7 +33,7 @@
         </div>
     </nav>
 
-    <form class="character form" id="characterForm">
+    <form>
         <div class="mb-3" id="name">
             <label for="name label" class="form-label">Name</label>
             <input type="" class="form-control" id="nameLabel" placeholder="">
