--- a/Single character/index.html
+++ b/Single character/index.html
@@ -31,45 +31,28 @@
     </nav>
 
 
-    <!-- <section class="container text-center">
-        <div class="row">
-            <div class="col-6 justify-content-center p-3">
-                <!-- Pour l'image du character 
-                <img src="/Single character/shrekk.jpeg" class="img-fluid img-thumbnail w-75 mx-auto d-block p-1" alt="...">
-            </div>
-            <h2 class="single-character__name">
-                Shrek
-            </h2>
-        </div>
-        <div class="single-character__description">
-            <p>
+  
 
-            </p>
-        </div>
-        <form action="" class="container">
-            <button type="button" class="btn btn-outline-success">Edit</button>
-            <button type="button" class="btn btn-outline-danger">Delete</button>
-            
-        </form>
-    </section> -->
+     <div class="card w-25 mx-auto mt-5 p-3">
 
-    <div class="card w-25 mx-auto mt-5 p-1">
-
-        <img src="/Single character/shrekk.jpeg" class="img-fluid img-thumbnail " alt="...">
+        <!-- <img src="" class="img-fluid img-thumbnail image" alt="...">
         <div class="card-body">
 
-            <h5 class="card-title text-center">Bob Shrekovsky, The First</h5>
-            <p class="card-text">This is a text that explains how Bob Shrekovsky is better than any of you. But this is not the text in question, it's just a tribute.</p>
+            <h5 class="card-title text-center character-name">Bob Shrekovsky, The First</h5>
+            <p class="card-shorttext text-center character-shorttext">This is a short text</p>
+            <p class="card-text characater-text">This is a text that explains how Bob Shrekovsky is better than any of you. But this is not the text in question, it's just a tribute.</p>
 
             <form action="" class="container text-center">
                 <button type="button" class="btn btn-outline-success">Edit</button>
                 <button type="button" class="btn btn-outline-danger">Delete</button>
             </form>
 
-        </div>
+        </div> -->
 
     </div>
- 
+
+
+    <script src="script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 </body>
 </html>
