--- a/Single character/singleCharacter.html
+++ b/Single character/singleCharacter.html
@@ -35,24 +35,10 @@
 
      <div class="card w-25 mx-auto mt-5 p-3">
 
-        <!-- <img src="" class="img-fluid img-thumbnail image" alt="...">
-        <div class="card-body">
-
-            <h5 class="card-title text-center character-name">Bob Shrekovsky, The First</h5>
-            <p class="card-shorttext text-center character-shorttext">This is a short text</p>
-            <p class="card-text characater-text">This is a text that explains how Bob Shrekovsky is better than any of you. But this is not the text in question, it's just a tribute.</p>
-
-            <form action="" class="container text-center">
-                <button type="button" class="btn btn-outline-success">Edit</button>
-                <button type="button" class="btn btn-outline-danger">Delete</button>
-            </form>
-
-        </div> -->
-
     </div>
 
 
-    <script src="script.js"></script>
+    <script src="singleCharacter.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 </body>
 </html>
