--- a/character-creation/character-creation.html
+++ b/character-creation/character-creation.html
@@ -10,7 +10,7 @@
         integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
 </head>
 
-<body>
+<body class="container-fluid">
     <nav class="navbar navbar-expand-lg bg-body-tertiary navbar-light">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">Characters Manager</a>
@@ -33,7 +33,7 @@
         </div>
     </nav>
 
-    <form>
+    <form class="p-5">
         <div class="mb-3" id="name">
             <label for="name label" class="form-label">Name</label>
             <input type="" class="form-control" id="nameLabel" placeholder="">
@@ -41,16 +41,16 @@
         <div class="mb-3" id="shortDescription">
             <label for="short description label" class="form-label">Short Description</label>
             <textarea class="form-control" id="shortDescriptionLabel" rows="2"></textarea>
-        </div>
-        <div class="mb-3" id="imageInput">
-            <input type="file" id="uploadImage" accept=".jpg, .jpeg, .png">
-        </div>
-        <div id="imageContainer"></div>
-        <div class="mb-3" id="" description>
-            <label for="description label" class="form-label">Description</label>
-            <textarea class="form-control" id="descriptionLabel" rows="6"></textarea>
-        </div>
-        <button type="submit" class="btn btn-primary" id="creationButton">Create</button>
+            <div id="imageContainer"></div>
+            <div class="mb-3" id="" description>
+                <label for="description label" class="form-label">Description</label>
+                <textarea class="form-control" id="descriptionLabel" rows="6"></textarea>
+                <div class="input-group mb-3">
+                    <input type="file" class="form-control" id="uploadImage">
+                    <label class="input-group-text" for="inputGroupFile02">Upload</label>
+                </div>
+            </div>
+            <button type="submit" class="btn btn-primary" id="creationButton">Create</button>
         </div>
     </form>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
@@ -64,5 +64,21 @@
         crossorigin="anonymous"></script>
     <script src="character-creation.js"></script>
 </body>
+<footer>
+
+    <div class="container-fluid w-auto text-center bg-body-tertiary border mt-5 pt-5 pb-5">
+        <div class="card-header mb-2">
+            A website made by
+        </div>
+        <div class="card-body">
+            <h5 class="card-title">Marius, Adeline & Jérôme</h5>
+            <p class="card-text mt-3">during our apprenticeship @BeCode</p>
+        </div>
+        <div class="card-footer text-body-secondary mt-2 ">
+            June/July 2023
+        </div>
+    </div>
+
+</footer>
 
 </html>
