Remise en place des modification suite au merge?

--- a/MainPage/index.html
+++ b/MainPage/index.html
@@ -58,7 +58,7 @@
 
             <div class="col-12 mb-3">
                 <div class="NewCharacter bg-body-tertiary border ">
-                    <a class="CreateNewCharacter" href="#"><i class="fa-solid fa-plus" style="color: rgb(179, 178, 178); font-size: xx-large; margin: 15px;"></i></a>
+                    <a class="CreateNewCharacter" href="character-creation.html"><i class="fa-solid fa-plus" style="color: rgb(179, 178, 178); font-size: xx-large; margin: 15px;"></i></a>
                 </div>
 
                 
