--- a/character-creation.html
+++ b/character-creation.html
@@ -11,27 +11,24 @@
 </head>
 
 <body class="container-fluid">
-    <nav class="navbar navbar-expand-lg bg-body-tertiary navbar-light">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">Characters Manager</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-
-
-
-                </ul>
-                <form class="d-flex" role="search">
-                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-outline-success" type="submit">Search</button>
-                </form>
-            </div>
+          <a class="navbar-brand" href="#">Characters Manager</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+              </li>
+              <li class="nav-item d-flex">
+                <a class="nav-link" href="#">Create a new character</a>
+              </li>
+              <li class="nav-item dropdown">
+          </div>
         </div>
-    </nav>
+      </nav>
 
     <form class="p-5">
         <div class="mb-3" id="name">
@@ -68,7 +65,7 @@
 
     <div class="container-fluid w-auto text-center bg-body-tertiary border mt-5 pt-5 pb-5">
         <div class="card-header mb-2">
-            A website made by
+            A website by
         </div>
         <div class="card-body">
             <h5 class="card-title">Marius, Adeline & Jérôme</h5>
