--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
+          <a class="nav-link active" aria-current="page" href="index.html">Home</a>
         </li>
         <li class="nav-item d-flex">
           <a class="nav-link" href="#">Create a new character</a>
@@ -76,7 +76,7 @@
         
         <div class="container-fluid w-auto text-center bg-body-tertiary border mt-5 pt-5 pb-5">
             <div class="card-header mb-2">
-            Un site réalisé par
+            A website by
             </div>
             <div class="card-body">
             <h5 class="card-title">Marius, Adeline & Jérôme</h5>
