--- a/singleCharacter.html
+++ b/singleCharacter.html
@@ -10,30 +10,46 @@
 </head>
 <body>
 
-    <nav class="navbar navbar-expand-lg bg-body-tertiary navbar-light">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#">Single Character</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-
-                </ul>
-                <form class="d-flex" role="search">
-                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success" type="submit">Search</button>
-                </form>
-          </div>
-        </div>
-    </nav>
+  <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">Characters Manager</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+          </li>
+          <li class="nav-item d-flex">
+            <a class="nav-link" href="#">Create a new character</a>
+          </li>
+          <li class="nav-item dropdown">
+      </div>
+    </div>
+  </nav>
 
 
     <div class="card w-25 mx-auto mt-5 p-3">
 
     </div>
 
+    <footer>
+        
+      <div class="container-fluid w-auto text-center bg-body-tertiary border mt-5 pt-5 pb-5">
+          <div class="card-header mb-2">
+          A website by
+          </div>
+          <div class="card-body">
+          <h5 class="card-title">Marius, Adeline & Jérôme</h5>
+          <p class="card-text mt-3">during our apprenticeship @BeCode</p>
+          </div>
+          <div class="card-footer text-body-secondary mt-2 ">
+          June/July 2023
+          </div>
+      </div>
 
+  </footer>
    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 </body>
