--- a/EditPage.html
+++ b/EditPage.html
@@ -23,7 +23,7 @@
             <a class="nav-link active" aria-current="page" href="index.html">Home</a>
           </li>
           <li class="nav-item d-flex">
-            <a class="nav-link" href="#">Create a new character</a>
+            <a class="nav-link" href="character-creation.html">Create a new character</a>
           </li>
           <li class="nav-item dropdown">
       </div>
