--- a/character-creation.html
+++ b/character-creation.html
@@ -6,8 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Character Creation</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <script src="character-creation.js" type="module" defer></script>
 </head>
 
@@ -42,11 +40,7 @@
             <label for="short description label" class="form-label">Short Description</label>
             <textarea class="form-control" id="shortDescriptionLabel" rows="2"></textarea>
             <div id="imageContainer"></div>
-            <div class="mb-3" id="" description>
-                <label for="description label" class="form-label">Description</label>
-                <textarea class="form-control" id="descriptionLabel" rows="6"></textarea>
-            </div>
-            <div id="editor-container"></div>
+            <div class="mb-3" id="editor-container"></div>
             <div class="input-group mb-3">
                 <input type="file" class="form-control" id="uploadImage">
                 <label class="input-group-text" for="inputGroupFile02">Upload</label>
@@ -54,15 +48,6 @@
             <button type="submit" class="btn btn-primary" id="creationButton">Create</button>
         </div>
     </form>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"
-        integrity="sha384-fbbOQedDUMZZ5KreZpsbe1LCZPVmfTnH7ois6mU1QK+m14rQ1l2bGBq41eYeM/fS"
-        crossorigin="anonymous"></script>
 
 </body>
 <footer>
