--- a/character-creation.html
+++ b/character-creation.html
@@ -39,8 +39,10 @@
         <div class="mb-3" id="shortDescription">
             <label for="short description label" class="form-label">Short Description</label>
             <textarea class="form-control" id="shortDescriptionLabel" rows="2"></textarea>
-            <div id="imageContainer"></div>
-            <div class="mb-3" id="editor-container"></div>
+            <div id="description">
+                <label for="description label" class="form-label">Description</label>
+                <div class="mb-3" id="editor-container"></div>
+            </div>
             <div class="input-group mb-3">
                 <input type="file" class="form-control" id="uploadImage">
                 <label class="input-group-text" for="inputGroupFile02">Upload</label>
